--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,6 @@ spring.thymeleaf.encoding=UTF-8
 logging.level.org.springframework.web.socket=DEBUG
 
 # Elasticsearch connection details
-#spring.elasticsearch.rest.uris=http://localhost:9300
-#spring.elasticsearch.rest.username=elastic
-#spring.elasticsearch.rest.password=changeme
+spring.elasticsearch.uris=https://ers.es.us-central1.gcp.cloud.es.io
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
