--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,10 +36,9 @@ spring.thymeleaf.encoding=UTF-8
 logging.level.org.springframework.web.socket=DEBUG
 
 # Elasticsearch connection details
-spring.elasticsearch.rest.uris=https://ers.es.us-central1.gcp.cloud.es.io/
-spring.elasticsearch.rest.username=elastic
-spring.elasticsearch.rest.password=ZJzWmRI4P7XVlIZgE3YwytUI
-
+spring.elasticsearch.uris=https://ers.es.us-central1.gcp.cloud.es.io
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
 #spring.data.elasticsearch.cluster-name=f2d277af9b51403480ea56669a8b61fc
 #spring.data.elasticsearch.cluster-nodes=https://ers.es.us-central1.gcp.cloud.es.io/
 #spring.data.elasticsearch.properties.restclient.socket-timeout=5000
