--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,7 @@ spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
 
 
 
+google.cloud.credentials.file=PATH_TO_YOUR_SERVICE_ACCOUNT_JSON_FILE
+
+
 
