--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,9 @@ spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
 
 
 
-google.cloud.credentials.file=PATH_TO_YOUR_SERVICE_ACCOUNT_JSON_FILE
+# application.properties
+spring.cloud.gcp.credentials.location=file:/path/to/your/credentials.json
+
 
 
 
