--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,18 @@
         </dependency>
 
 
+<!--        <dependency>-->
+<!--            <groupId>net.bramp.ffmpeg</groupId>-->
+<!--            <artifactId>ffmpeg</artifactId>-->
+<!--            <version>4.4</version> &lt;!&ndash; Update the version accordingly &ndash;&gt;-->
+<!--        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/service -->
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>service</artifactId>
+            <version>0.14.0</version>
+        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-speech -->
