--- a/pom.xml
+++ b/pom.xml
@@ -320,11 +320,11 @@
             <version>0.14.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>ai.openai</groupId>
-            <artifactId>whisper</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ai.openai</groupId>-->
+<!--            <artifactId>whisper</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
 
 
         <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-speech -->
