--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-openai.api.key=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
+openai.api.key=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
 
 #CK FINDER
 
@@ -39,9 +39,9 @@ openai.api.key=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
 logging.level.org.springframework.web.socket=DEBUG
 
 # Elasticsearch connection details
-spring.elasticsearch.uris=https://ers.es.us-central1.gcp.cloud.es.io/
+spring.elasticsearch.uris=https://eed1b91e481448d5ae1bb7e498c28b48.us-central1.gcp.cloud.es.io/
 spring.elasticsearch.username=elastic
-spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
+spring.elasticsearch.password=ZangS5CgqmyLCWKHxSmFmDnI
 
 
 # application.properties
