custom error controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,9 @@ spring.elasticsearch.password=ZJzWmRI4P7XVlIZgE3YwytUI
 # application.properties
 spring.cloud.gcp.credentials.location=file:/path/to/your/credentials.json
 
+#ERROR HANDLE
+server.error.path=/error
+
 
 
 
