--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MONGODB DB CONNECTION
 
 #Remote
-spring.data.mongodb.uri=mongodb+srv://fers:3cmkbRdVSp1XVLvn@fers.2ri4jr9.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://fers:lEYopjqVAyAsn2wB@fers.yn5bdza.mongodb.net/
 spring.data.mongodb.database=e_resource
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
