--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+
 #MONGODB DB CONNECTION
 
 #Remote
@@ -31,9 +32,8 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-openai.api.key=xxx
+openai.api.key=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
 
-spring.profiles.active=dev
 
 #CK FINDER
 
