--- a/pom.xml
+++ b/pom.xml
@@ -294,11 +294,11 @@
             <version>2.3.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>3.7</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.poi</groupId>-->
+<!--            <artifactId>poi</artifactId>-->
+<!--            <version>3.7</version>-->
+<!--        </dependency>-->
 
 
 <!--        <dependency>-->
