Fix update course dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-openai.api.key=xxx
+#openai.api.key=xxx
 
 spring.profiles.active=dev
 
