--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,7 +32,7 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-openai.api.key=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
+#openai.api.key=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
 
 
 #CK FINDER
