--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,9 +31,8 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-#openai.api.key=xxx
+openai.api.key=${OPENAI_API_KEY}
 
-spring.profiles.active=dev
 
 #CK FINDER
 
