--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,8 @@ spring.thymeleaf.check-template-location=false
 spring.thymeleaf.encoding=UTF-8
 
 #OpenAI
-openai.api.key=${OPENAI_API_KEY}
+#openai.api.key=${OPENAI_API_KEY}
+openai.api.key=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
 
 
 #CK FINDER
