--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 #MONGODB DB CONNECTION
 
 #Remote
-spring.data.mongodb.uri=mongodb+srv://fers:lEYopjqVAyAsn2wB@fers.dpaqngr.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://fers:n76TKO25O47n1qtD@fers.aokasbg.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=e_resource
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
